--- a/mscore/articulation.ui
+++ b/mscore/articulation.ui
@@ -89,27 +89,27 @@
            <widget class="QComboBox" name="anchor">
             <item>
              <property name="text">
-              <string>Top Staff</string>
+              <string>Above Staff</string>
              </property>
             </item>
             <item>
              <property name="text">
-              <string>Bottom Staff</string>
+              <string>Below Staff</string>
              </property>
             </item>
             <item>
              <property name="text">
-              <string>Chord Direction</string>
+              <string>Chord Automatic</string>
              </property>
             </item>
             <item>
              <property name="text">
-              <string>Top Chord</string>
+              <string>Above Chord</string>
              </property>
             </item>
             <item>
              <property name="text">
-              <string>Bottom Chord</string>
+              <string>Below Chord</string>
              </property>
             </item>
            </widget>
