--- a/mscore/debugger/segment.ui
+++ b/mscore/debugger/segment.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>564</width>
+    <width>800</width>
     <height>347</height>
    </rect>
   </property>
@@ -17,7 +17,16 @@
    <property name="spacing">
     <number>6</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>8</number>
+   </property>
+   <property name="topMargin">
+    <number>8</number>
+   </property>
+   <property name="rightMargin">
+    <number>8</number>
+   </property>
+   <property name="bottomMargin">
     <number>8</number>
    </property>
    <item>
@@ -199,62 +208,6 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="3" colspan="2">
-         <widget class="QComboBox" name="segmentType">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="toolTip">
-           <string notr="true"/>
-          </property>
-          <property name="sizeAdjustPolicy">
-           <enum>QComboBox::AdjustToContents</enum>
-          </property>
-          <item>
-           <property name="text">
-            <string notr="true">Clef Segment</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string notr="true">Key Signature</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string notr="true">Time Signature</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string notr="true">Begin Repeat</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string notr="true">Chord/Rest</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string notr="true">Breath Segment</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string notr="true">End Bar Line</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string notr="true">Time Signature Announce</string>
-           </property>
-          </item>
-         </widget>
-        </item>
         <item row="2" column="2">
          <widget class="QLabel" name="label_10">
           <property name="toolTip">
@@ -288,6 +241,22 @@
           </property>
           <property name="textFormat">
            <enum>Qt::PlainText</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3" colspan="2">
+         <widget class="QLabel" name="segmentType">
+          <property name="frameShape">
+           <enum>QFrame::StyledPanel</enum>
+          </property>
+          <property name="frameShadow">
+           <enum>QFrame::Sunken</enum>
+          </property>
+          <property name="lineWidth">
+           <number>2</number>
+          </property>
+          <property name="text">
+           <string>TextLabel</string>
           </property>
          </widget>
         </item>
