'untranslate' the string "TextLabel"
Former-commit-id: b7e7bbba51365d7d994ab9162c9052a796f08e59

--- a/mscore/debugger/segment.ui
+++ b/mscore/debugger/segment.ui
@@ -256,7 +256,7 @@
            <number>2</number>
           </property>
           <property name="text">
-           <string>TextLabel</string>
+           <string notr="true">TextLabel</string>
           </property>
          </widget>
         </item>
